--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.58",
     "@types/react-dom": "^18.2.13",
+    "@types/react-katex": "^3.0.4",
+    "katex": "^0.16.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-katex": "^3.0.1",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
+    "react-syntax-highlighter": "^15.5.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -44,6 +48,7 @@
   "devDependencies": {
     "@types/react": "^18.2.45",
     "@types/react-helmet": "^6.1.11",
-    "@types/react-router-dom": "^5.3.3"
+    "@types/react-router-dom": "^5.3.3",
+    "@types/react-syntax-highlighter": "^15.5.11"
   }
 }
