--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-katex": "^3.0.1",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
+    "react-snap": "^1.23.0",
     "react-syntax-highlighter": "^15.5.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -28,7 +29,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postbuild": "react-snap"
   },
   "eslintConfig": {
     "extends": [
