--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-katex": "^3.0.4",
     "katex": "^0.16.9",
     "react": "^18.2.0",
+    "react-d3-tree": "^3.6.2",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-katex": "^3.0.1",
