--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/react": "^18.2.45",
     "@types/react-helmet": "^6.1.11",
     "@types/react-router-dom": "^5.3.3",
