--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.58",
     "@types/react-dom": "^18.2.13",
     "@types/react-katex": "^3.0.4",
     "katex": "^0.16.9",
@@ -18,20 +17,16 @@
     "react-helmet": "^6.1.0",
     "react-katex": "^3.0.1",
     "react-router-dom": "^6.20.0",
-    "react-scripts": "5.0.1",
-    "react-snap": "^1.23.0",
     "react-syntax-highlighter": "^15.5.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "postbuild": "react-snap"
+    "deploy": "gh-pages -d dist"
   },
   "eslintConfig": {
     "extends": [
@@ -53,11 +48,15 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/node": "^24.10.0",
     "@types/react": "^18.2.45",
     "@types/react-helmet": "^6.1.11",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-syntax-highlighter": "^15.5.11",
-    "gh-pages": "^6.1.1",
-    "tailwindcss": "^3.4.1"
+    "@vitejs/plugin-react": "^5.1.0",
+    "autoprefixer": "^10.4.21",
+    "gh-pages": "^6.3.0",
+    "tailwindcss": "^3.4.18",
+    "vite": "^7.2.2"
   }
 }
