--- a/package.json
+++ b/package.json
@@ -4,10 +4,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
     "@types/react-dom": "^18.2.13",
     "@types/react-katex": "^3.0.4",
     "katex": "^0.16.9",
@@ -17,8 +13,7 @@
     "react-helmet": "^6.1.0",
     "react-katex": "^3.0.1",
     "react-router-dom": "^6.20.0",
-    "react-syntax-highlighter": "^15.5.0",
-    "web-vitals": "^2.1.4"
+    "react-syntax-highlighter": "^15.5.0"
   },
   "scripts": {
     "dev": "vite",
