--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.17",
     "@types/react-dom": "^18.2.13",
     "@types/react-katex": "^3.0.4",
     "katex": "^0.16.9",
@@ -13,7 +14,8 @@
     "react-helmet": "^6.1.0",
     "react-katex": "^3.0.1",
     "react-router-dom": "^7.9.5",
-    "react-syntax-highlighter": "^15.5.0"
+    "react-syntax-highlighter": "^15.5.0",
+    "tailwindcss": "^4.1.17"
   },
   "scripts": {
     "dev": "vite",
@@ -47,9 +49,7 @@
     "@types/react-helmet": "^6.1.11",
     "@types/react-syntax-highlighter": "^15.5.11",
     "@vitejs/plugin-react": "^5.1.0",
-    "autoprefixer": "^10.4.21",
     "gh-pages": "^6.3.0",
-    "tailwindcss": "^3.4.18",
     "typescript": "^5.9.3",
     "vite": "^7.2.2"
   }
